[risk=low][no ticket] 404 is better than 500/NPE when not found (#8416)